# GamesCourse

./: README.md
Games101/: README.md
Games101/MyHomework/pa0/: CMakeLists.txt  main.cpp
Games101/MyHomework/pa1/code/: CMakeLists.txt  main.cpp
Games101/MyHomework/pa2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Games101/MyHomework/pa3/: README.md
Games101/MyHomework/pa3/code/: Texture.hpp  main.cpp  rasterizer.cpp
Games101/MyHomework/pa4/: README.md
Games101/MyHomework/pa4/code/: main.cpp
Games101/MyHomework/pa5/: README.md
Games101/MyHomework/pa5/Code/: Renderer.cpp  Triangle.hpp
Games101/MyHomework/pa6/: README.md
Games101/MyHomework/pa6/code/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Triangle.hpp
Games101/MyHomework/pa7/: README.md
Games101/MyHomework/pa7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  main.cpp
Games101/MyHomework/pa8/: README.md
Games101/MyHomework/pa8/code/: rope.cpp
